# iotics-grpc-client-py

./: .env.sample  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  buf.gen.yaml  buf.yaml  helloworld.txt  setup.cfg
.github/workflows/: check.yml  draft_release.yml  iotics-grpc-client-py.yml  publish.yml  tag.yml  test-workflow.yml
examples/: add_property_to_twin.py  create_blank_twin_zed.py  create_edit_twins_feeds.py  create_model.py  create_update_inputs.py  delete.py  delete_twins_of_model.py  describe.py  dump_twins_of_model.py  follow_feed.py  follow_feed_cust.py  identity_auth.py  inputs.py  list_local_twins.py  list_twins.py  search_location.py  search_twin_models.py  sparql.py  tl_follow_control.py  traffic_lights.py
src/: test_twins_and_feeds.py
src/iotics/: __init__.py
src/iotics/api/: circle_pb2.py  circle_pb2.pyi  circle_pb2_grpc.py  circle_pb2_grpc.pyi  common_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.pyi  feed_grpc.py  feed_pb2.py  feed_pb2.pyi  feed_pb2_grpc.py  feed_pb2_grpc.pyi  host_grpc.py  host_pb2.py  host_pb2.pyi  host_pb2_grpc.py  host_pb2_grpc.pyi  input_grpc.py  input_pb2.py  input_pb2.pyi  input_pb2_grpc.py  input_pb2_grpc.pyi  interest_grpc.py  interest_pb2.py  interest_pb2.pyi  interest_pb2_grpc.py  interest_pb2_grpc.pyi  meta_grpc.py  meta_pb2.py  meta_pb2.pyi  meta_pb2_grpc.py  meta_pb2_grpc.pyi  search_grpc.py  search_pb2.py  search_pb2.pyi  search_pb2_grpc.py  search_pb2_grpc.pyi  twin_grpc.py  twin_pb2.py  (+3 more)
src/iotics/lib/grpc/: __init__.py  auth.py  base.py  circles.py  feeds.py  helpers.py  host.py  input.py  interest.py  iotics_api.py  search.py  sparql.py  twins.py
