[metadata]
name = iotics-grpc-client
version = 2.0.2
description = Iotics gRPC client library
long_description = file: README.md
long_description_content_type = text/markdown
author = Iotics
platform = any
url = https://github.com/Iotic-Labs/iotics-grpc-client-py
keywords = iotics, grpc, digital twin
python_requires = >=3.8
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/Iotic-Labs/iotics-grpc-client-py/issues
    Changelog = https://github.com/Iotic-Labs/iotics-grpc-client-py/releases

[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
package_dir =
    =src
install_requires =
    googleapis-common-protos>=1.56.3
    # pinned grpcio version to 1.44.0 to fix working on raspberry Pi 
    # c.f. https://stackoverflow.com/questions/71054519/glibc-2-33-not-found-in-raspberry-pi-python/72485013#72485013
    grpcio==1.44.0

[options.extras_require]
dev =
    mypy-protobuf>=3.2.0
    python-dotenv>=0.20.0
    iotics-identity>=1.0.2

[options.packages.find]
where=src
