[metadata]
name = iotics-grpc-client
version = 7.1.0
description = Iotics gRPC client library
long_description = file: README.md
long_description_content_type = text/markdown
author = Iotics
platform = any
url = https://github.com/Iotic-Labs/iotics-grpc-client-py
keywords = iotics, grpc, digital twin
python_requires = >=3.8
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/Iotic-Labs/iotics-grpc-client-py/issues
    Changelog = https://github.com/Iotic-Labs/iotics-grpc-client-py/releases

[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
package_dir =
    =src
install_requires =
    protobuf~=5.28.0
    googleapis-common-protos~=1.65.0
    grpcio~=1.66.1

[options.extras_require]
dev =
    mypy-protobuf>=3.2.0
    python-dotenv>=0.20.0
    iotics-identity>=1.0.4

[options.packages.find]
where=src
